<resources>
    <string name="app_name">Sweetie</string>
    <string name="calendar_tab_name">Diary</string>
    <string name="home_tab_name">Home</string>
    <string name="folders_tab_name">Folders</string>
    <string name="map_tab_name">Map</string>

    <!-- dashboard menu -->
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_send_couple_request">Find your partner</string>
    <string name="menu_couple_details">Couples</string>
    <string name="menu_settings">Settings</string>

    <!-- Gallery -->
    <string name="gallery_cab_menu_remove">Remove</string>

    <!-- ActionNewChatFragment dialog -->
    <string name="action_new_chat_title_dialog">Insert new chat title</string>
    <!-- ActionNewGalleryFragment dialog -->
    <string name="action_new_gallery_title_dialog">Insert new gallery title</string>
    <!-- ActionNewToDoListFragment dialog -->
    <string name="action_new_todolist_title_dialog">Insert new To-Do list title</string>
    <!-- ActionNewGeogiftFragment dialog -->
    <string name="action_new_geogift_title_dialog">Insert new geogift title</string>

    <!-- ActionMenuDialogFragment -->
    <string name="action_remove_menu_dialog_option">Remove</string>

    <!-- CoupleDetailsFragment -->
    <string name="couple_details_title_appbar">Couple</string>
    <string name="search_partner_button">Find Partner</string>
    <string name="break_couple_button">Break</string>
    <string name="couple_anniversary_label">Anniversary:</string>
    <string name="couple_date_pairing_label">Date pairing:</string>
    <string name="and">and</string>

    <string name="break_couple_question">Are you sure?</string>
    <string name="break_yes">Confirm</string>
    <string name="break_no">Back</string>

    <string name="break_up_notification">You break up with\u0020</string>
    <string name="couple_notification">You couple with\u0020</string>


    <!-- ChatFragment -->
    <string name="hint_chat_message">\tWrite a new message</string>
    <!-- bugged with lollipop 5.1.1 -->
    <!--<string name="camera_emoticons"></string>-->
    <string name="chat_cab_menu_remove">Remove</string>


    <!-- CoupleDetailsFragment placeholder -->
    <string name="couples_name_text">John and Mary</string>
    <string name="couples_date_default">16 settembre 2017</string>

    <!-- SettingsFragment -->
    <string name="app_permission_denied">App permission denied</string>
    <string name="settings_title_appbar">Settings</string>
    <string name="settings_info_label">Info</string>
    <string name="settings_username_label">Username:</string>
    <string name="settings_email_label">Email:</string>
    <string name="settings_phone_label">Telephone: </string>
    <string name="settings_gender_label">Gender:</string>

    <string name="settings_options_label">Options</string>
    <string name="settings_geogift_label">Geogift</string>
    <string name="settings_geogift_desc">Give to app the permission to find geogift</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- Test String for debug version -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</string>
    <string name="action_title">No title</string>

    <!-- Image Picker -->
    <string name="image_picker_select">Tap to select</string>

    <!-- Geogift  -->
    <string name="select_location_geogift">Select an address where to place a gift …</string>
    <string name="text_hint_geogift">Insert message …</string>
    <string name="hint_expiration_geogift">Expiration time</string>
    <string name="sending_geogift">Sending geogift …</string>
    <string name="title_alter_dialog_back">Delete geogift creation?</string>
    <string name="address_geogift">Address:</string>
    <string name="datetime_positioned_geogift">Positioned on</string>
    <string name="isvisited_no_geogifty">Not open yet</string>
    <string name="is_visited_yes_geogifty">Opened</string>
    <string name="is_triggered_yes_geogifty">Triggered</string>
    <string name="open_geogift">Open the gift!</string>

    <!--Todolist-->
    <string name="add_entry">Add Entry</string>

    <!-- Map -->
    <string name="geogift_toptab">GEOGIFTS</string>
    <string name="galleries_toptab">GALLERIES</string>

    <!-- Location Picker -->
    <string name="google_locate_picker_key">AIzaSyDtJP5SOBfQ4EJ67KcX7ughd4_DXxQEIv8</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>

    <!-- Firebase IDs -->
    <string name="server_client_ID">237232205216-hup7d485gvs7cjmj91avi6cpupuimsvj.apps.googleusercontent.com</string>

    <!-- action info -->
    <string name="date_creation_label">Date creation:</string>
    <string name="position_label">Map position</string>
    <string name="menu_open_info">Open info</string>

    <!-- Register -->
    <string name="register_title">Login</string>
    <string name="register_welcome_msg">Welcome on Sweetie! Sign in to start</string>
    <string name="register_info_set_user_img">Upload your profile picture or press next. \n You can do it later.</string>

</resources>
