<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/menu_sign_out"
        android:title="@string/menu_sign_out"
        app:showAsAction="never" />


    <!-- Show search partner OR couple details -->
    <item android:id="@+id/menu_search_partner"
        android:title="@string/search_partner_button"
        app:showAsAction="never" />

    <item android:id="@+id/menu_couple_details"
        android:title="@string/menu_couple_details"
        app:showAsAction="never" />


    <!--TODO: DEBUG-->
    <item android:id="@+id/menu_fake_geogift"
        android:title="Test Geogift"
        app:showAsAction="never" />

    <item android:id="@+id/menu_print_sp"
        android:title="Print log sp"
        app:showAsAction="never" />

</menu>