<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settings_image"
        app:layout_constraintVertical_chainStyle="spread"

        android:elevation="4dp"
        android:background="?attr/colorPrimary"

        app:theme="@style/ToolBarStyle"
        app:title="@string/settings_title_appbar"
        />


    <!--<ImageView
        android:id="@+id/settings_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:scaleType="fitXY"

        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settings_info_layout"
        />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="180dp"
        android:layout_height="180dp"

        app:civ_border_width="0.8dp"
        app:civ_border_color="@color/action_separator"

        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settings_info_layout"
        />

    <ProgressBar
        android:id="@+id/settings_progress_bar_image_upload"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_image"
        />

    <TextView
        android:id="@+id/settings_progress_image_upload"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_image"
        />


    <ImageButton
        android:id="@+id/settings_change_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_image"

        android:background="@drawable/shape_circle"
        android:src="@drawable/ic_photo_camera_black_24dp"
        android:elevation="4dp"
        />


    <RelativeLayout
        android:id="@+id/settings_info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        app:layout_constraintTop_toBottomOf="@+id/settings_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="#FFF"
        android:elevation="1dp"
        >

        <TextView
            android:id="@+id/settings_info_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="8dp"

            android:textStyle="bold"
            android:text="@string/settings_info_label"/>

        <!-- username row -->

        <TextView
            android:id="@+id/settings_username_label"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_info_label"
            android:layout_alignParentStart="true"

            android:text="@string/settings_username_label"/>

        <TextView
            android:id="@+id/settings_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"
            android:layout_below="@+id/settings_info_label"
            android:layout_toEndOf="@+id/settings_username_label"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text=""/>

        <!-- email row -->

        <TextView
            android:id="@+id/settings_email_label"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_username_label"
            android:layout_alignParentStart="true"
            android:text="@string/settings_email_label"/>

        <TextView
            android:id="@+id/settings_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_username_label"
            android:layout_toEndOf="@+id/settings_email_label"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text=""/>

        <!-- phone number row -->

        <TextView
            android:id="@+id/settings_phone_label"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_email_label"
            android:layout_alignParentStart="true"
            android:text="@string/settings_phone_label"/>

        <TextView
            android:id="@+id/settings_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_email_label"
            android:layout_toEndOf="@+id/settings_email_label"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text=""/>

        <!-- Gender row -->

        <TextView
            android:id="@+id/settings_gender_label"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_phone_label"
            android:text="@string/settings_gender_label"
            />

        <TextView
            android:id="@+id/settings_gender"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_phone_label"
            android:layout_toEndOf="@+id/settings_gender_label"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text=""
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_options_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        app:layout_constraintTop_toBottomOf="@+id/settings_info_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="#FFF"
        android:elevation="1dp" >

        <TextView
            android:id="@+id/settings_options_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="8dp"

            android:textStyle="bold"
            android:text="@string/settings_options_label" />

        <!-- phone number row -->

        <TextView
            android:id="@+id/settings_geogift_label"
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_options_label"
            android:layout_alignParentStart="true"
            android:text="@string/settings_geogift_label"/>

        <TextView
            android:id="@+id/settings_geogift_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/settings_general_padding"
            android:paddingEnd="@dimen/settings_general_padding"
            android:paddingTop="1dp"
            android:paddingBottom="@dimen/settings_general_padding"

            android:layout_below="@+id/settings_geogift_label"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/settings_geogift_switch"
            android:textSize="12sp"
            android:textColor="@color/grey_black"
            android:text="@string/settings_geogift_desc" />

        <Switch
            android:id="@+id/settings_geogift_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_general_padding"
            android:layout_below="@+id/settings_options_label"
            android:layout_alignBottom="@+id/settings_geogift_desc"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>