<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/couple_details_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/couple_image"
        app:layout_constraintVertical_chainStyle="spread"

        android:elevation="4dp"
        android:background="?attr/colorPrimary"

        app:theme="@style/ToolBarStyle"
        app:title="@string/couple_details_title_appbar"
        />

    <ImageView
        android:id="@+id/couple_image"
        android:layout_width="0dp"
        android:layout_height="220dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couple_details_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/couple_names"

        android:scaleType="fitXY" />

    <ProgressBar
        android:id="@+id/couple_progress_bar_image_upload"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/couple_image"
        app:layout_constraintBottom_toBottomOf="@+id/couple_image"
        />

    <TextView
        android:id="@+id/couple_progress_image_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/couple_image"
        app:layout_constraintBottom_toBottomOf="@+id/couple_image"
        />

    <ImageButton
        android:id="@+id/couple_change_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/couple_image"

        android:background="@drawable/shape_circle"
        android:src="@drawable/ic_photo_camera_black_24dp"
        android:elevation="4dp"
        />

    <!---->

    <TextView
        android:id="@+id/couple_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"

        app:layout_constraintTop_toBottomOf="@+id/couple_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        android:background="#FFF"
        android:text="@string/couples_name_text"
        android:elevation="1dp"
        />


    <!-- Anniversary row -->

    <TextView
        android:id="@+id/couple_anniversary_label"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couple_names"
        app:layout_constraintEnd_toStartOf="@+id/couple_anniversary"

        android:text="@string/couple_anniversary_label"
        android:textStyle="bold"
        android:background="#FFF"
        android:elevation="1dp"
        />

    <TextView
        android:id="@+id/couple_anniversary"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:gravity="center"

        app:layout_constraintStart_toEndOf="@+id/couple_anniversary_label"
        app:layout_constraintTop_toBottomOf="@+id/couple_names"
        app:layout_constraintEnd_toStartOf="@+id/couple_edit_anniversary_button"
        app:layout_constraintBottom_toBottomOf="@+id/couple_edit_anniversary_button"

        android:text="@string/couples_date_default"
        android:background="#FFF"
        android:elevation="1dp"
        />

    <ImageButton
        android:id="@+id/couple_edit_anniversary_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintStart_toEndOf="@+id/couple_anniversary"
        app:layout_constraintTop_toBottomOf="@+id/couple_names"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"

        android:src="@drawable/ic_mode_edit_black_24dp"
        android:background="#FFF"
        android:alpha="0.7"
        android:elevation="1dp"
        />

    <!-- Pairing row -->

    <TextView
        android:id="@+id/couple_date_pairing_label"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couple_anniversary_label"
        app:layout_constraintEnd_toStartOf="@+id/couple_anniversary"

        android:text="@string/couple_date_pairing_label"
        android:textStyle="bold"
        android:background="#FFF"
        android:elevation="1dp"
        />

    <TextView
        android:id="@+id/couple_date_pairing"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"

        app:layout_constraintStart_toEndOf="@+id/couple_date_pairing_label"
        app:layout_constraintTop_toBottomOf="@+id/couple_anniversary"
        app:layout_constraintEnd_toEndOf="@+id/couple_anniversary"

        android:gravity="center"
        android:text="@string/couples_date_default"
        android:background="#FFF"
        android:elevation="1dp"
        />

    <View
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintStart_toEndOf="@+id/couple_date_pairing"
        app:layout_constraintTop_toBottomOf="@+id/couple_edit_anniversary_button"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="#FFF"
        android:elevation="1dp"
        />

    <!-- -->

    <Button
        android:id="@+id/couple_details_break_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/break_couple_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>